fix overlay z-index

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -29,7 +29,7 @@ body {
 
 header {
   height: 80px;
-  z-index: 10004;
+  z-index: 10006;
   position: relative;
   background-color: #fff;
 }
